@@ -18,11 +18,33 @@ package net.sf.jabref.gui;
 import java.awt.BorderLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Vector;
 
-import javax.swing.*;
+import javax.swing.AbstractAction;
+import javax.swing.ActionMap;
+import javax.swing.BorderFactory;
+import javax.swing.ButtonGroup;
+import javax.swing.InputMap;
+import javax.swing.JButton;
+import javax.swing.JCheckBox;
+import javax.swing.JComboBox;
+import javax.swing.JComponent;
+import javax.swing.JDialog;
+import javax.swing.JFrame;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+import javax.swing.JRadioButton;
+import javax.swing.JTextField;
 
-import net.sf.jabref.*;
+import net.sf.jabref.BasePanel;
+import net.sf.jabref.BibtexFields;
+import net.sf.jabref.BrowseAction;
+import net.sf.jabref.Globals;
+import net.sf.jabref.MetaData;
+import net.sf.jabref.config.SaveOrderConfig;
 
 import com.jgoodies.forms.builder.ButtonBarBuilder;
 import com.jgoodies.forms.builder.DefaultFormBuilder;
@@ -42,10 +64,21 @@ public class DatabasePropertiesDialog extends JDialog {
     JComboBox<String> encoding;
     JButton ok, cancel;
     JTextField fileDir = new JTextField(40),
-	fileDirIndv = new JTextField(40),
-	pdfDir = new JTextField(40),
-	psDir = new JTextField(40);
+ fileDirIndv = new JTextField(40),
+			pdfDir = new JTextField(40), psDir = new JTextField(40);
     String oldFileVal="", oldFileIndvVal="", oldPdfVal="", oldPsVal=""; // Remember old values to see if they are changed.
+	SaveOrderConfig oldSaveOrderConfig;
+
+    /* The code for "Save sort order" is copied from FileSortTab and slightly updated to fit storing at metadata */
+    
+	private JRadioButton saveAsConfiguredGlobally, saveInOriginalOrder,
+			saveInSpecifiedOrder;
+    private JComboBox<String> savePriSort, saveSecSort, saveTerSort;
+    private JTextField savePriField, saveSecField, saveTerField;
+    private JCheckBox savePriDesc, saveSecDesc, saveTerDesc;
+	
+	public static final String SAVE_ORDER_CONFIG = "saveOrderConfig";
+
     JCheckBox protect = new JCheckBox(Globals.lang("Refuse to save the database before external changes have been reviewed."));
     boolean oldProtectVal = false;
 
@@ -73,12 +106,15 @@ public class DatabasePropertiesDialog extends JDialog {
         browsePdf.addActionListener(new BrowseAction(parent, pdfDir, true));
         browsePs.addActionListener(new BrowseAction(parent, psDir, true));
 
+		setupSortOrderConfiguration();
+        
         DefaultFormBuilder builder = new DefaultFormBuilder(new FormLayout("left:pref, 4dlu, left:pref, 4dlu, fill:pref", ""));
         builder.getPanel().setBorder(BorderFactory.createEmptyBorder(5,5,5,5));
 
         builder.append(Globals.lang("Database encoding"));
         builder.append(encoding);
         builder.nextLine();
+
         builder.appendSeparator(Globals.lang("Override default file directories"));
         builder.nextLine();
         builder.append(Globals.lang("General file directory"));
@@ -97,6 +133,40 @@ public class DatabasePropertiesDialog extends JDialog {
         builder.append(psDir);
         builder.append(browsePs);
         builder.nextLine();
+		
+		builder.appendSeparator(Globals.lang("Save sort order"));
+		builder.append(saveAsConfiguredGlobally, 1);
+		builder.nextLine();
+		builder.append(saveInOriginalOrder, 1);
+		builder.nextLine();
+		builder.append(saveInSpecifiedOrder, 1);
+		builder.nextLine();
+
+		// Create a new panel with its own FormLayout for these items:
+		FormLayout layout2 = new FormLayout("right:pref, 8dlu, fill:pref, 4dlu, fill:60dlu, 4dlu, left:pref", "");
+		DefaultFormBuilder builder2 = new DefaultFormBuilder(layout2);
+		JLabel lab = new JLabel(Globals.lang("Primary sort criterion"));
+		builder2.append(lab);
+		builder2.append(savePriSort);
+		builder2.append(savePriField);
+		builder2.append(savePriDesc);
+		builder2.nextLine();
+		lab = new JLabel(Globals.lang("Secondary sort criterion"));
+		builder2.append(lab);
+		builder2.append(saveSecSort);
+		builder2.append(saveSecField);
+		builder2.append(saveSecDesc);
+		builder2.nextLine();
+		lab = new JLabel(Globals.lang("Tertiary sort criterion"));
+		builder2.append(lab);
+		builder2.append(saveTerSort);
+		builder2.append(saveTerField);
+		builder2.append(saveTerDesc);
+		
+		JPanel saveSpecPanel = builder2.getPanel();
+		builder.append(saveSpecPanel);
+		builder.nextLine();
+
         builder.appendSeparator(Globals.lang("Database protection"));
         builder.nextLine();
         builder.append(protect,3);
@@ -135,7 +205,86 @@ public class DatabasePropertiesDialog extends JDialog {
 
     }
 
-    public void setVisible(boolean visible) {
+	private void setupSortOrderConfiguration() {
+		saveAsConfiguredGlobally = new JRadioButton(Globals.lang("Save entries as configured globally"));
+		saveInOriginalOrder = new JRadioButton(Globals.lang("Save entries in their original order"));
+		saveInSpecifiedOrder = new JRadioButton(Globals.lang("Save entries ordered as specified"));
+		
+		ButtonGroup bg = new ButtonGroup();
+		bg.add(saveAsConfiguredGlobally);
+		bg.add(saveInOriginalOrder);
+		bg.add(saveInSpecifiedOrder);
+		ActionListener listener = new ActionListener() {
+			
+			public void actionPerformed(ActionEvent e) {
+				boolean selected = e.getSource() == saveInSpecifiedOrder;
+				savePriSort.setEnabled(selected);
+				savePriField.setEnabled(selected);
+				savePriDesc.setEnabled(selected);
+				saveSecSort.setEnabled(selected);
+				saveSecField.setEnabled(selected);
+				saveSecDesc.setEnabled(selected);
+				saveTerSort.setEnabled(selected);
+				saveTerField.setEnabled(selected);
+				saveTerDesc.setEnabled(selected);
+			}
+		};
+		
+		saveAsConfiguredGlobally.addActionListener(listener);
+		saveInOriginalOrder.addActionListener(listener);
+		saveInSpecifiedOrder.addActionListener(listener);
+		
+		ArrayList<String> v = new ArrayList<String>(Arrays.asList(BibtexFields.getAllFieldNames()));
+		v.add(BibtexFields.KEY_FIELD);
+		Collections.sort(v);
+		String[] allPlusKey = v.toArray(new String[v.size()]);
+		savePriSort = new JComboBox<String>(allPlusKey);
+		saveSecSort = new JComboBox<String>(allPlusKey);
+		saveTerSort = new JComboBox<String>(allPlusKey);
+		
+		savePriSort.insertItemAt(Globals.lang("<select>"), 0);
+		saveSecSort.insertItemAt(Globals.lang("<select>"), 0);
+		saveTerSort.insertItemAt(Globals.lang("<select>"), 0);
+		
+		savePriField = new JTextField(10);
+		saveSecField = new JTextField(10);
+		saveTerField = new JTextField(10);
+		
+		savePriSort.addActionListener(new ActionListener() {
+			
+			public void actionPerformed(ActionEvent e) {
+				if (savePriSort.getSelectedIndex() > 0) {
+					savePriField.setText(savePriSort.getSelectedItem().toString());
+					savePriSort.setSelectedIndex(0);
+				}
+			}
+		});
+		saveSecSort.addActionListener(new ActionListener() {
+			
+			public void actionPerformed(ActionEvent e) {
+				if (saveSecSort.getSelectedIndex() > 0) {
+					saveSecField.setText(saveSecSort.getSelectedItem().toString());
+					saveSecSort.setSelectedIndex(0);
+				}
+			}
+		});
+		saveTerSort.addActionListener(new ActionListener() {
+			
+			public void actionPerformed(ActionEvent e) {
+				if (saveTerSort.getSelectedIndex() > 0) {
+					saveTerField.setText(saveTerSort.getSelectedItem().toString());
+					saveTerSort.setSelectedIndex(0);
+				}
+			}
+		});
+		
+		savePriDesc = new JCheckBox(Globals.lang("Descending"));
+		saveSecDesc = new JCheckBox(Globals.lang("Descending"));
+		saveTerDesc = new JCheckBox(Globals.lang("Descending"));
+
+	}
+	
+	public void setVisible(boolean visible) {
         if (visible)
             setValues();
         super.setVisible(visible);
@@ -143,6 +292,41 @@ public class DatabasePropertiesDialog extends JDialog {
 
     public void setValues() {
         encoding.setSelectedItem(panel.getEncoding());
+
+		Vector<String> storedSaveOrderConfig = metaData.getData(SAVE_ORDER_CONFIG);
+		boolean selected;
+		if (storedSaveOrderConfig == null) {
+			saveAsConfiguredGlobally.setSelected(true);
+			oldSaveOrderConfig = null;
+			selected = false;
+		} else {
+			SaveOrderConfig saveOrderConfig;
+			saveOrderConfig = new SaveOrderConfig(storedSaveOrderConfig);
+			oldSaveOrderConfig = saveOrderConfig;
+			if (saveOrderConfig.saveInOriginalOrder) {
+				saveInOriginalOrder.setSelected(true);
+				selected = false;
+			} else {
+				assert (saveOrderConfig.saveInSpecifiedOrder == true);
+				saveInSpecifiedOrder.setSelected(true);
+				selected = true;
+			}
+			savePriField.setText(saveOrderConfig.sortCriteria[0].field);
+			savePriDesc.setSelected(saveOrderConfig.sortCriteria[0].descending);
+			saveSecField.setText(saveOrderConfig.sortCriteria[1].field);
+			saveSecDesc.setSelected(saveOrderConfig.sortCriteria[1].descending);
+			saveTerField.setText(saveOrderConfig.sortCriteria[2].field);
+			saveTerDesc.setSelected(saveOrderConfig.sortCriteria[2].descending);
+		}
+		savePriSort.setEnabled(selected);
+		savePriField.setEnabled(selected);
+		savePriDesc.setEnabled(selected);
+		saveSecSort.setEnabled(selected);
+		saveSecField.setEnabled(selected);
+		saveSecDesc.setEnabled(selected);
+		saveTerSort.setEnabled(selected);
+		saveTerField.setEnabled(selected);
+		saveTerDesc.setEnabled(selected);
 
         Vector<String> fileD = metaData.getData(Globals.prefs.get("userFileDir"));
         if (fileD == null)
@@ -206,6 +390,29 @@ public class DatabasePropertiesDialog extends JDialog {
     }
 
     public void storeSettings() {
+		SaveOrderConfig newSaveOrderConfig;
+    	if (saveAsConfiguredGlobally.isSelected()) {
+			metaData.remove(SAVE_ORDER_CONFIG);
+			newSaveOrderConfig = null;
+    	} else {
+    		SaveOrderConfig saveOrderConfig = new SaveOrderConfig();
+			newSaveOrderConfig = saveOrderConfig;
+    		if (saveInOriginalOrder.isSelected()) {
+    			saveOrderConfig.setSaveInOriginalOrder();
+    		} else {
+    			saveOrderConfig.setSaveInSpecifiedOrder();
+    		}
+    		saveOrderConfig.sortCriteria[0].field = savePriField.getText();
+			saveOrderConfig.sortCriteria[0].descending = savePriDesc.isSelected();
+			saveOrderConfig.sortCriteria[1].field = saveSecField.getText();
+			saveOrderConfig.sortCriteria[1].descending = saveSecDesc.isSelected();
+			saveOrderConfig.sortCriteria[2].field = saveTerField.getText();
+			saveOrderConfig.sortCriteria[2].descending = saveTerDesc.isSelected();
+
+			Vector<String> serialized = saveOrderConfig.getVector();
+			metaData.putData(SAVE_ORDER_CONFIG, serialized);
+    	}
+    	
         String oldEncoding = panel.getEncoding();
         String newEncoding = (String)encoding.getSelectedItem();
         panel.setEncoding(newEncoding);
@@ -256,7 +463,17 @@ public class DatabasePropertiesDialog extends JDialog {
 
 
         // See if any of the values have been modified:
-        boolean changed = !newEncoding.equals(oldEncoding)
+		boolean saveOrderConfigChanged;
+		if (oldSaveOrderConfig == newSaveOrderConfig) {
+			saveOrderConfigChanged = false;
+		} else if ((oldSaveOrderConfig == null) || (newSaveOrderConfig == null)) {
+			saveOrderConfigChanged = true;
+		} else {
+			// check on vector basis. This is slower than directly implementing equals, but faster to implement
+			saveOrderConfigChanged = !oldSaveOrderConfig.getVector().equals(newSaveOrderConfig.getVector());
+		}
+		
+		boolean changed = saveOrderConfigChanged || !newEncoding.equals(oldEncoding)
             || !oldFileVal.equals(fileDir.getText())
             || !oldFileIndvVal.equals(fileDirIndv.getText())
             || !oldPdfVal.equals(pdfDir.getText())
